removed majority of deprecated URL constructor use